--- a/style.css
+++ b/style.css
@@ -1,108 +1,122 @@
 @font-face {
-    font-family: Oxygen;
-    src: url(./fonts/Oxygen-Light.ttf);
-    font-weight: lighter;
+  font-family: Oxygen;
+  src: url(./fonts/Oxygen-Light.ttf);
+  font-weight: lighter;
 }
 
 @font-face {
-    font-family: Oxygen;
-    src: url(./fonts/Oxygen-Regular.ttf);
-    font-weight: normal;
+  font-family: Oxygen;
+  src: url(./fonts/Oxygen-Regular.ttf);
+  font-weight: normal;
 }
 
 @font-face {
-    font-family: Oxygen;
-    src: url(./fonts/Oxygen-Bold.ttf);
-    font-weight: bold;
+  font-family: Oxygen;
+  src: url(./fonts/Oxygen-Bold.ttf);
+  font-weight: bold;
 }
 
 span {
-    color: white;
-    animation: fadein 2s;
-    font-family: Oxygen;
-    font-weight: lighter;
+  color: white;
+  animation: fadein 2s;
+  font-family: Oxygen;
+  font-weight: lighter;
 }
 
 h1 {
-    font-family: Oxygen;
-    font-weight: lighter;
-    text-align: center;
-    color: white;
-    animation: fadein 2s;
+  font-family: Oxygen;
+  font-weight: lighter;
+  text-align: center;
+  color: white;
+  animation: fadein 2s;
 }
 
 .projects {
-    text-align: left;
-    justify-content: left;
+  text-align: left;
+  justify-content: left;
 }
 
 .project {
-    text-align: left;
-
+  text-align: left;
 }
 
 @keyframes fadein {
-    from {opacity: 0; transform: translateY(-20px);}
-    to {opacity: 1; transform: translateY(0px);}
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 @keyframes fadein-late {
-    0% {opacity: 0; transform: translateY(-20px);}
-    70% {opacity: 0; transform: translateY(-20px);}
-    100% {opacity: 1; transform: translateY(0px);}
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  70% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
 }
 
 .projects-desc-text {
-    font-family: sans-serif;
-    font-size:26px;
-    font-weight: bold;
-    animation: fadein-late 2s;
-    color: black;
+  font-family: sans-serif;
+  font-size: 26px;
+  font-weight: bold;
+  animation: fadein-late 2s;
+  color: black;
 }
 
 a {
-    text-decoration: none;
-    font-family: sans-serif;
-    color: white;
+  text-decoration: none;
+  font-family: sans-serif;
+  color: white;
 }
 
 body {
-    height: 100%;
-    background: rgb(1, 180, 245);
-    width: 100%;
-    margin: 0 0 0 0;
-    display: block;
-    text-align: center;
-    font-family: Oxygen;
+  height: 100%;
+  background: rgb(1, 180, 245);
+  width: 100%;
+  margin: 0 0 0 0;
+  display: block;
+  text-align: center;
+  font-family: Oxygen;
 }
 
 .nav-anchor {
-    background: rgb(0, 100, 255);
-    height: fit-content;
-    text-align: center;
-    padding: 8px;
-    border-radius: 10px;
+  background: rgb(0, 100, 255);
+  height: fit-content;
+  text-align: center;
+  padding: 8px;
+  border-radius: 10px;
 }
 
 .top-nav {
-    padding: 10px;
-    height:50px;
-    width: 100%;
-    display: inline-flex;
-    text-align: center;
-    position: relative;
-    flex-direction: row;
-    background: rgb(0, 60, 200);
+  padding: 10px;
+  height: 50px;
+  width: 100%;
+  display: inline-flex;
+  text-align: center;
+  position: relative;
+  flex-direction: row;
+  background: rgb(0, 60, 200);
 }
 
 .top-bar {
-    display: flex;
-    position: relative;
-    flex-direction: column;
-    text-align: center;
-    justify-content: center;
-    width: 100%;
-    height:400px;
-    background: #003855;
-    background: linear-gradient(0deg, rgb(1, 180, 245) 0%, #003855 15%);
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  text-align: center;
+  justify-content: center;
+  width: 100%;
+  height: 400px;
+  background: #003855;
+  background: linear-gradient(0deg, rgb(1, 180, 245) 0%, #003855 15%);
 }
